<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="button_heading">My Nanodegree Apps!</string>
    <string name="button1_string">POPULAR MOVIES</string>
    <string name="button2_string">STOCK HAWK</string>
    <string name="button3_string">BUILD IT BIGGER</string>
    <string name="button4_string">MAKE YOUR APP MATERIAL</string>
    <string name="button5_string">GO UBIQUITOUS</string>
    <string name="button6_string">CAPSTONE</string>


</resources>
