<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bodhi.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/text"
        android:text="@string/button_heading"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <Button
        android:text="@string/button1_string"
        android:id="@+id/button1"
        android:onClick="buttonClicked"
        android:layout_below="@+id/text"

        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button2_string"
        android:id="@+id/button2"
        android:onClick="buttonClicked"
        android:layout_centerHorizontal="true"

        android:layout_below="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button3_string"
        android:id="@+id/button3"
        android:onClick="buttonClicked"
        android:layout_centerHorizontal="true"

        android:layout_below="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button4_string"
        android:id="@+id/button4"
        android:onClick="buttonClicked"

        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button5_string"
        android:id="@+id/button5"
        android:onClick="buttonClicked"
        android:layout_centerHorizontal="true"

        android:layout_below="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button6_string"
        android:id="@+id/button6"
        android:onClick="buttonClicked"

        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />





</RelativeLayout>
